--- a/locales/pt_BR.json
+++ b/locales/pt_BR.json
@@ -388,8 +388,8 @@
       "hh" : "%d horas",
       "h" : "uma hora",
       "y" : "um ano",
-      "past" : "%s agora",
-      "mm" : "%d minutes",
+      "past" : "%s atrás",
+      "mm" : "%d minutos",
       "yy" : "%d anos",
       "s" : "alguns segundos",
       "d" : "um dia",
